BARC UAT/src/objects/Packing_List_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>HSN_Code__c</fullName>
        <formula>Product__r.HSN_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HSN Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_UOM__c</fullName>
        <label>Item UOM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kitting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kitting</label>
        <referenceTo>Kitting__c</referenceTo>
        <relationshipLabel>Packing List Line Items</relationshipLabel>
        <relationshipName>Packing_List_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packing_List_Quantity__c</fullName>
        <label>Packing List Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packing_List__c</fullName>
        <label>Packing List</label>
        <referenceTo>Packing_List__c</referenceTo>
        <relationshipLabel>Packing List Line Items</relationshipLabel>
        <relationshipName>Packing_List_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Packing List Line Items</relationshipLabel>
        <relationshipName>Packing_List_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Specification__c</fullName>
        <label>Specification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Packing List Line Item</label>
    <nameField>
        <displayFormat>PLLI-{0000000}</displayFormat>
        <label>Packing List Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packing List Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>